# playoff_odds

./: .gitignore  datasource.py  datasource_mlb.py  ds_mlb.ipynb  elo_vs_wpct.ipynb  parallel_driver.py  perf_testing.ipynb  perf_utils.py  playoff_format.csv  pyproject.toml  season_simulator.py  series_probs_approx.py  sim_output.py  sim_results_processing.py  sim_utils.py  summarize_results.py  tiebreaker_impls.py  tiebreakers.py  tiebreakers_clinched.py
