[tool.poetry]
name = "playoff-odds"
version = "0.1.0"
description = ""
authors = ["Vinay Kumar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.2.0"
plotly = "^5.18.0"
scikit-learn = "^1.4.0"
statsmodels = "^0.14.1"
typer = "^0.9.0"
rich = "^13.7.0"
pyarrow = "^15.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
nbformat = "^5.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
